--- a/docs/templates/components/header.html
+++ b/docs/templates/components/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header-content">
-        <h1 class="app-title">もも 일본어 단어장</h1>
+        <h1 class="app-title" id="app-title">もも 일본어 단어장</h1>
         <div class="header-buttons">
             <button class="header-download-btn" id="downloadJpgBtn">
                 <span class="download-icon">🖼️</span>
