--- a/docs/templates/youon-screen.html
+++ b/docs/templates/youon-screen.html
@@ -1,8 +1,8 @@
 <div class="character-learning-screen" id="youonScreen">
     <!-- 헤더 -->
-    <div class="character-header">
+    <!-- <div class="character-header">
         <h2 class="character-title">요음 (拗音)</h2>
-    </div>
+    </div> -->
 
     <!-- 메인 문자 표시 영역 -->
     <div class="character-card" id="youonCard">
