--- a/docs/templates/word-screen.html
+++ b/docs/templates/word-screen.html
@@ -19,6 +19,7 @@
             <div class="pronunciation-meaning">
                 <div class="hiragana-block">
                     <span class="hiragana" id="hiragana">やくそく</span>
+                    <button class="speech-btn" id="speechWordBtn" title="단어 음성 듣기">🔊</button>
                 </div>
                 <div class="meaning-block">
                     <span class="meaning" id="meaning">약속</span>
@@ -31,6 +32,7 @@
             <div class="example-block">
                 <div class="jp-example">
                     <span id="jpExample1">明日は友達と映画を見る約束があります。</span>
+                    <button class="speech-btn speech-btn-small" id="speechExample1Btn" title="예문1 음성 듣기">🔊</button>
                 </div>
                 <div class="ko-example">
                     <span id="koExample1">내일은 친구와 영화를 보기로 약속이 있어요.</span>
@@ -39,6 +41,7 @@
             <div class="example-block">
                 <div class="jp-example">
                     <span id="jpExample2">約束の時間に遅れないようにしてください。</span>
+                    <button class="speech-btn speech-btn-small" id="speechExample2Btn" title="예문2 음성 듣기">🔊</button>
                 </div>
                 <div class="ko-example">
                     <span id="koExample2">약속 시간에 늦지 않도록 해주세요.</span>
